# 15-418-Project

./: .gitignore  README.md  build.bat  build.sh  louvain_seq.cpp  louvain_seq.h  test_all.sh  test_louvain.cpp
graph_generator/: Makefile  generate_graph.sh  graph_generator.cpp
inputs/: community_1e4_ultrasparse.txt
results/: speed_ratio_test_small-world_1e4_highmix.txt_20250429_105332.csv  speed_ratio_test_small-world_1e4_highmix.txt_20250429_110130.csv  speed_ratio_test_small-world_1e4_highmix.txt_20250429_110425.csv
src/: CMakeLists.txt  checker.py  core_type.cpp  core_type.h  graph.cpp  graph.h  hierarchy.h  louvain_parallel.cpp  louvain_parallel.h  louvain_parallel_bl.cpp  louvain_parallel_bl.h  louvain_parallel_static.cpp  louvain_parallel_static.h  louvain_parallel_static_bl.cpp  louvain_parallel_static_bl.h  louvain_parallel_vfc.cpp  louvain_parallel_vfc.h  louvain_parallel_vfc_bl.cpp  louvain_parallel_vfc_bl.h  louvain_seq.cpp  louvain_seq.h  test_all.bat  test_louvain.cpp  test_naive_bl.bat  test_static.py
